--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -19,8 +19,8 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }} # optional if on profile readme
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }} # required
           ### meta
-          API_BASE_URL: https://wakatime.com/api # optional
-          REPOSITORY: YOUR_GITHUB_USERNAME/YOUR_REPOSITORY_NAME # optional
+          # API_BASE_URL: https://wakatime.com/api # optional
+          # REPOSITORY: YOUR_GITHUB_USERNAME/YOUR_REPOSITORY_NAME # optional
           ### content
           SHOW_TITLE: true # optional
           SECTION_NAME: waka # optional
@@ -35,9 +35,5 @@ jobs:
           ### commit
           COMMIT_MESSAGE: Updated waka-readme graph with new metrics # optional
           TARGET_BRANCH: main # optional
-          TARGET_PATH: README.md # optional
-          COMMITTER_NAME: GitHubActionBot # optional
-          COMMITTER_EMAIL: action-bot@github.com # optional
-          AUTHOR_NAME: Junyu # optional
-          AUTHOR_EMAIL: ericli.jy@outlook.com # optional
+
           # you can populate email-id with secretes instead
