--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -17,3 +17,14 @@ jobs:
       - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          SHOW_PROFILE_VIEWS: False
+          SHOW_COMMIT: True
+          SHOW_DAYS_OF_WEEK: False
+          SHOW_LANGUAGE: True
+          SHOW_OS: True
+          SHOW_PROJECTS: False
+          SHOW_TIMEZONE: True
+          SHOW_EDITORS: True
+          SHOW_LANGUAGE_PER_REPO: False
+          SHOW_LOC_CHART: False
+          SHOW_SHORT_INFO: False
