--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -1,23 +1,29 @@
 name: Waka Readme
 
 on:
-  workflow_dispatch:
   schedule:
-    # Runs at 00:00AM UTC
     - cron: '0 0 * * *'
+  workflow_dispatch:
   push:
     branches: [main]
 
 jobs:
   update-readme:
-    name: Update this repo's README
+    name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: anmol098/waka-readme-stats@master #PLEASE USE MASTER BRANCH
+      - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_PROJECTS: "False"
-          SHOW_LINES_OF_CODE: "True"
-          SHOW_LOC_CHART: "False"
-          LOCALE: "en"
+          SHOW_PROFILE_VIEWS : False
+          SHOW_COMMIT : False
+          SHOW_DAYS_OF_WEEK : False
+          SHOW_LANGUAGE : True
+          SHOW_OS : True
+          SHOW_PROJECTS : False
+          SHOW_TIMEZONE : False
+          SHOW_EDITORS : True
+          SHOW_LANGUAGE_PER_REPO : False
+          SHOW_LOC_CHART : False
+          SHOW_SHORT_INFO : False
