--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -16,9 +16,10 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_TOTAL_CODE_TIME: True
           SHOW_PROFILE_VIEWS: False
-          SHOW_COMMIT: False
-          SHOW_DAYS_OF_WEEK: False
+          SHOW_COMMIT: True
+          SHOW_DAYS_OF_WEEK: True
           SHOW_LANGUAGE: True
           SHOW_OS: True
           SHOW_PROJECTS: False
