--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -18,11 +18,11 @@ jobs:
           SHOW_PROFILE_VIEWS: False
           SHOW_COMMIT: False
           SHOW_DAYS_OF_WEEK: True
-          SHOW_LANGUAGE: True
-          SHOW_OS: True
+          SHOW_LANGUAGE: False
+          SHOW_OS: False
           SHOW_PROJECTS: False
           SHOW_TIMEZONE: False
-          SHOW_EDITORS: True
+          SHOW_EDITORS: False
           SHOW_LANGUAGE_PER_REPO: True
           SHOW_LOC_CHART: False
           SHOW_SHORT_INFO: False
